// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders an article-summary component 1`] = `
<View
  style={Object {}}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#333333",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 12,
        "letterSpacing": 1,
        "marginBottom": 2,
      }
    }
  >
    
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#333333",
        "fontFamily": "TimesModern-Bold",
        "fontSize": 22,
        "fontWeight": "400",
        "lineHeight": 22,
        "marginBottom": 8,
      }
    }
  >
    
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#696969",
        "flexWrap": "wrap",
        "fontFamily": "TimesDigital-Regular",
        "fontSize": 14,
        "lineHeight": 20,
        "marginBottom": 10,
      }
    }
  />
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#696969",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 13,
        },
        Object {},
      ]
    }
  >
    Thursday January 01 1970
    
  </Text>
</View>
`;

exports[`renders an article-summary component with content 1`] = `
<View
  style={Object {}}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#333333",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 12,
        "letterSpacing": 1,
        "marginBottom": 2,
      }
    }
  >
    CAMILLA LONG
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#333333",
        "fontFamily": "TimesModern-Bold",
        "fontSize": 22,
        "fontWeight": "400",
        "lineHeight": 22,
        "marginBottom": 8,
      }
    }
  >
    OK, so Putin’s not a lady, but he does have the wildest man‑PMT
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#696969",
        "flexWrap": "wrap",
        "fontFamily": "TimesDigital-Regular",
        "fontSize": 14,
        "lineHeight": 20,
        "marginBottom": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      A tip-off from desperate parents led Turkish police to swoop on three British teenagers as they allegedly travelled to join Islamic State, 
       has learnt.
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Two 17-year-old Muslim schoolboys from the Pakistani community in Brent, northwest London, and a 19-year-old man were intercepted in Istanbul at the weekend and swiftly returned to England. They were questioned by counterterrorism officials last night.
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Quick action by the parents of the younger boys, when the pair did not return home after Friday prayers, thwarted the latest alleged attempt by young Britons to join the terrorist group, sources said.
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      It came two days after Britain’s most senior police officer reassured the families of three runaway schoolgirls from east London that they would not be prosecuted if they returned
    </Text>
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#696969",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 13,
        },
        Object {},
      ]
    }
  >
    Saturday July 01 2017
    , The Sunday Times
  </Text>
</View>
`;
